r323 (31. 05. 2025):
VR: Fixed a crash with deployables

r322 (26. 05. 2025):
Buffs: Fixed an issue where Bloodthirst (Reload) Buff does not work when Bloodthirst Buff is disabled
Menu: Fixed an issue where Equipment Tracker is visible but related options are disabled
Money Tracker: Fixed an issue where the tracker is visible in Safehouse

r321 (23. 04. 2025):
Converts Tracker: Fixed a very rare crash probably due to mods
Menu: Fixed a crash on opening menu due to typo

r320 (22. 04. 2025):
Menu: Increased negative X and Y offsets from 0 to -1920 and -1080 respectively
The Bomb: Forest: Fixed an issue where Loot Counter reports additional loot bag but a loot wagon is not visible

r319 (24. 03. 2025):
Added options "Persistent Damage Immunity", "Persistent Damage Immunity Cooldown" and "Persistent Dealing Damage - Armor Regen Cooldown"
Added option "Show Floating Health Bars for Regular and Special Enemies and Turrets"
Berserker Buff: Buff will stay on the screen only if you have a melee or damage boost and text format is set to one of the boosts
Menu: Fixed visual issues with "Money" tracker
Slaughterhouse: Fixed incorrect number of loot on Very Hard or below
Poco Health Float Style: Improved memory and performance by preloading health floats for Converts and Turrets

r318 (22. 03. 2025):
Added "Money" tracker
Added support for "Classic Heisting" mod
Fixed an issue where timed loot zone trackers are not visible (regression from r303)
Fixed an issue where completion color animation is not playing correctly on Timer trackers
Jewelry Store: Fixed an issue where random loot is not sometimes properly reflected in the Loot Counter
Jewelry Store: Reworked escape waypoints to show less "Car" icon when the escape vehicle arrived

r317 (17. 03. 2025):
Green Bridge: Fixed a crash as a client on scaffolding

r316 (12. 03. 2025):
Poco Health and Damage Float: Fixed an issue where floats are visible when in-game hud is turned off

r315 (08. 03. 2025):